@@ -1,3 +1,8 @@
+Tue Oct 23 10:51:24 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: better logic for figuring out something is a
+	  URI
+
 Mon Oct 22 21:39:42 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: recognize uris on the command line
